Fix z-index of notifications so they overlap correctly with modal and sticky header

--- a/src/angular-app/bellows/cssBootstrap4/palaso-ui.scss
+++ b/src/angular-app/bellows/cssBootstrap4/palaso-ui.scss
@@ -180,7 +180,7 @@ div.notices {
     top: 7px;
     left: 0;
     right: 0;
-    z-index: 11000;
+    z-index: 1025;
     min-width: 300px;
     max-width: 450px;
     width: auto;
